[DXP-672] Fixes after review